# design-project-flight-controller

./: README.md
Final Report/: .aux  main.acn  main.acr  main.alg  main.aux  main.bbl  main.bcf  main.blg  main.glsdefs  main.ist  main.lof  main.lot  main.out  main.tex  main.toc
Final Report/1_header/: glossaries.aux  glossary-table.aux  glossary-table.tex  glossary.aux  glossary.tex  packages.tex  summary.tex  title.tex  version.tex
Final Report/2_body/: design.tex  introduction.tex  manual.tex  recommendations.tex
Final Report/2_body/design/: .aux  architecture.tex  assembly.aux  assembly.tex  elements-firmware.tex  elements-hardware.tex  elements.tex  other.tex  safety-ethical-risk.aux  safety-ethical-risk.tex  stakeholder.aux  stakeholder.tex  testing.tex
Final Report/3_footer/: appendices.tex  ref.bib
Firmware/: CMakeLists.txt  Notes.md  sdkconfig  sdkconfig.old
Firmware/components/data/: indexV1.html  indexV2.html
Firmware/components/modules/: CMakeLists.txt  controller.c  estimator.c  filter.c  i2c.c  motors.c  sensors.c  stabliser.c  websocket.c
Firmware/components/modules/include/: controller.h  estimator.h  filter.h  i2c.h  motors.h  sensors.h  stabiliser.h  websocket.h
Firmware/main/: Kconfig.projbuild  main.c
Frame/: battery_cage.stl  camera_mount.stl  leg.stl  main_frame.stl
PCB FIles/: BOM_Drone_V1_To_Order_no button for reorder_PCB23_1_2025-10-19.xlsx  PickAndPlace_PCB.xlsx
Prototypes/: OldFrame_fitsPBC2 1.stl
V&V/: RequirementsReview.xlsx
